kubernetes/whoami/3_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: "kong"
  rules:
    - host: localhost
      http:
        paths:
          - path: /whoami
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 8080
